Pass over universe and edit script
  - Split definition of HTree and HList
  - Untyped version of edit

--- a/main.tex
+++ b/main.tex
@@ -392,32 +392,59 @@ The universe used in this paper consists of typed heterogeneous rose
 trees, a combination of mutually recursive heterogeneous lists and
 trees, whose \emph{nodes} correspond to data type constructors and
 their children to their fields.
+
+\paragraph{Constructors}
+Type \texttt{C as a} denotes a constructor of an algebraic data type
+of type \texttt{a}, that takes arguments of types given in list
+\texttt{as}.
+%
+For instance constructor \texttt{True} is represented by type \texttt{C []
+  Bool}, because it does not take any argument and produces a Boolean
+value.
+%
+Note that also polymorphic data types are supported by this
+representation.
+%
+For example, construct \texttt{Just} takes a single argument of type
+\texttt{a} and yields a value of type \texttt{Maybe a}, for any type
+\texttt{a}, is represented by \texttt{C [a] (Maybe a)}.
+%
+In the following, we will leave type \texttt{C as a} abstract, as a
+module parameter, together with a decidable heterogeneous equality
+operator\footnote{In Agda, \texttt{Set} is the kind of simple types
+  and \texttt{List Set} is the type of a list containing simple
+  types.}.
+
+\begin{minted}{agda}
+module Diff3 (C : List Set → Set → Set) 
+              (_≟_ : (α : C as a) (β : C bs b) → Dec (α ≅ β)) where
+\end{minted}
+In Section \ref{sec:haskell} we show how to concretely implement them.
+
+\paragraph{Well-Typed Rose Trees}
+Data type \texttt{HTree a} is a tree-like data structure that
+represents an algebraic data type of type \texttt{a}, 
+using constructor denoted by \texttt{C as a}.
+
 \begin{minted}{agda}
   data HTree : Set → Set where
     Node : C as a → HList as → HTree a
-
-
+\end{minted}
+%
+Data type \texttt{HList as} collects the children of node, i.e. the
+arguments of constructor \texttt{C as a}, each encoded as a typed
+tree.
+%
+\begin{minted}{agda}
   data HList : List Set → Set where
     [] : HList []
    _∷_ : HTree a → HList as → HList (a ∷ as)
 \end{minted}
-In Agda, \texttt{Set} is the kind of simple types and \texttt{List
-  Set} is the type of a list of simple types.
-%
-Data type \texttt{HTree a} is a tree-like data structure that represents an
-algebraic data type of type \texttt{a}.
-%
-Type \texttt{C as a} denotes a constructor of an algebraic data type
-of type \texttt{a}, that takes arguments of types given by the list
-\texttt{as}.
-%
-Data type \texttt{HList as} is an \emph{heterogeneous} list,
-containing a typed tree for each type in list \texttt{as}.
 %
 This representation is type-safe because constructor \texttt{Node}
-ensures that the constructor and the heterogeneous list share the same
-index \texttt{as}, therefore denoting a well-typed application of a
-constructor to its arguments.
+requires the same index \texttt{as} in the constructor representation
+and in the heterogeneous list, therefore denoting a well-typed
+application of a constructor to its arguments.
 % 
 
 \paragraph{Example}
@@ -427,10 +454,9 @@ hs : HTree (List Int)
 hs = Node (\textcolor{blue}{::}) [Node \textcolor{magenta}{1} [], Node (\textcolor{blue}{::}) [Node \textcolor{magenta}{2} [], Node \textcolor{blue}{[]} []]]
 \end{Verbatim}
 Where \texttt{(\textcolor{blue}{::}) : C [Int, List Int] (List Int)}
-and \texttt{\textcolor{blue}{[]} : C [] (List Int)} are the
-reification of the cons constructor and the empty list constructor
-respectively, specialized without loss of generality to \texttt{List
-  Int}.
+and \texttt{\textcolor{blue}{[]} : C [] (List Int)} denote the cons
+constructor and the empty list constructor respectively, specialized
+without loss of generality to \texttt{List Int}.
 %
 In our examples we automatically lift numbers to node constructors,
 that is \texttt{\textcolor{magenta}{1}, \textcolor{magenta}{2} : C []
@@ -446,16 +472,6 @@ We graphically depict objects encoded in this universe as trees:
    [.\texttt{(\textcolor{blue}{::})} [.\texttt{\textcolor{magenta}{2}} ] [.\texttt{\textcolor{blue}{[]}} ]]
 ]
 \end{figure}
-
-We will show in Section \ref{sec:haskell} how to concretely
-instantiate \texttt{C} with specific data types, in the following
-model we will just leave it abstract as a module parameter, together
-with a decidable heterogeneous equality operator.
-
-\begin{minted}{agda}
-module Diff3 (C : List Set → Set → Set) 
-              (_≟_ : (α : C as a) (β : C bs b) → Dec (α ≅ β)) where
-\end{minted}
 	
 \todo{Move later?}
 In the following we will use two auxiliary functions to append and
@@ -466,82 +482,104 @@ hsplit : HList (as ++ bs) → HList as × HList bs
 \end{minted}
 	
 \section{Generic diff}
-	Our \texttt{diff3} algorithm relies on a \texttt{diff} algorithm, used 
-        as a subroutine to quickly compare the input objects and merge them.
-	The algorithm finds the differences between two heterogeneous lists given 
-	as input producing an edit script, whose edit operations progressively 
-	transform one into the other.
+Our \texttt{diff3} algorithm relies on a \texttt{diff} algorithm, used
+as a subroutine to compare the input objects and merge them.
+%
+The algorithm detect differences between two heterogeneous lists
+given as input producing an edit script, whose edit operations
+progressively transform one into the other.
+%
+More precisely an edit script is a list of edits, that either insert,
+delete, or replace the nodes of the input objects.
+%
+We firstly describe a simply typed version of edit and edit scripts and
+then add indexes to make them well-typed.
 
-	\subsection{Edit Operations}
-	Single edits are defined over \emph{values}, which denote either the presence or 
-	the absence of a node.
-        At first, we might try to define them as a maybe value:
+\subsection{Edit Operations}
+An edit operation is a mapping \texttt{u ⟼ v}, where \texttt{u} and
+\texttt{v} are called \emph{source} and \emph{target} value
+respectively.
+%
+A value is an optional node, i.e.  \texttt{Value as a = Maybe (C as
+  a)}. 
+%
+For brevity, we write \texttt{⊥} for an empty value and \texttt{⟨ α ⟩}
+for a value containing node \texttt{α}.
+%
+
+%         In the type \texttt{Val as a} the parameters \texttt{as} and
+%         \texttt{a} witness the possible presence of a node \texttt{C
+%           as a}, that given objects of types \texttt{as} will produce
+%         an object of type \texttt{a}.
+%         %
+%         The drawback of this encoding is that \texttt{as} and
+%         \texttt{a} are valid input and output approximations only if a
+%         node is in fact present.
+%         %
+%         On the other hand, an indexed data type can give a much more
+%         accurate approximation:
+% \begin{minted}{agda}
+% data Val : List Set → List Set → Set where
+%   ⊥ : Val [] []
+%   ⟨_⟩ : C as a → Val as [ a ] 
+% \end{minted}
+%   The data type \texttt{Val as bs} is indexed by two lists
+%   \texttt{as} and \texttt{bs} that assume only certain values,
+%   depending on the presence of a node, ensuring that they always
+%   accurately approximate inputs and outputs regardless of the
+%   presence of a node.
+% %
+%   More precisely the empty value \texttt{⊥} corresponds to
+%   \texttt{nothing} and since it does not consume any input and produce
+%   nothing, both its lists are empty.
+% %
+%   Value \texttt{⟨ α ⟩} corresponds to \texttt{just α} and represents a
+%   non-empty value that contains node \texttt{α : C as a} which
+%   consumes objects of types \texttt{as} and produces a single object
+%   of type \texttt{a}.
+% %
+%   The type \texttt{u ⟼ v} denotes an edit that maps \emph{source}
+%   value \texttt{u} into \emph{target} value \texttt{v}.
+%
+  
+All the possible combinations of source and target value states, i.e.\
+empty and non-empty, form four different edit operations.
+
 \begin{minted}{agda}
-Val : List Set → Set → Set
-Val as a = Maybe (C as a)
-\end{minted}
-        In the type \texttt{Val as a} the parameters \texttt{as} and
-        \texttt{a} witness the possible presence of a node \texttt{C
-          as a}, that given objects of types \texttt{as} will produce
-        an object of type \texttt{a}.
-        %
-        The drawback of this encoding is that \texttt{as} and
-        \texttt{a} are valid input and output approximations only if a
-        node is in fact present.
-        %
-        On the other hand, an indexed data type can give a much more
-        accurate approximation:
-\begin{minted}{agda}
-data Val : List Set → List Set → Set where
-  ⊥ : Val [] []
-  ⟨_⟩ : C as a → Val as [ a ] 
-\end{minted}
-  The data type \texttt{Val as bs} is indexed by two lists
-  \texttt{as} and \texttt{bs} that assume only certain values,
-  depending on the presence of a node, ensuring that they always
-  accurately approximate inputs and outputs regardless of the
-  presence of a node.
-%
-  More precisely the empty value \texttt{⊥} corresponds to
-  \texttt{nothing} and since it does not consume any input and produce
-  nothing, both its lists are empty.
-%
-  Value \texttt{⟨ α ⟩} corresponds to \texttt{just α} and represents a
-  non-empty value that contains node \texttt{α : C as a} which
-  consumes objects of types \texttt{as} and produces a single object
-  of type \texttt{a}.
-%
-  The type \texttt{u ⟼ v} denotes an edit that maps \emph{source}
-  value \texttt{u} into \emph{target} value \texttt{v}.
-%
-  Edit operations includes a no-operation, node deletion, insertion
-  and update.
-\begin{minted}{agda}
-data _⟼_ : Val as bs → Val cs ds → Set where
+data _⟼_ : Value as a → Value bs a → Set where
   Nop : ⊥ ⟼ ⊥
   Del : (α : C as a) → ⟨ α ⟩ ⟼ ⊥
   Ins : (α : C as a) → ⊥ ⟼ ⟨ α ⟩
   Upd : (α : C as a) (β : C bs a) → ⟨ α ⟩ ⟼ ⟨ β ⟩
 \end{minted}
-  The \texttt{Nop} edit is a no-operation that is used exclusively to
-  \emph{align} edit scripts, therefore it maps the empty value into
-  itself.  
+The \texttt{Nop} edit is a no-operation, that will be
+used in Section \ref{subsec:alignment}, to \emph{align} edit scripts
 %
-  Edit \texttt{Del α} deletes node \texttt{α} by mapping \texttt{⟨ α
-    ⟩} into \texttt{⊥}, conversely \texttt{Ins α} inserts node
-  \texttt{α}, by mapping \texttt{⊥} into \texttt{⟨ α ⟩}.
+Edit \texttt{Del α} deletes node \texttt{α}, which is mapped to
+the empty value \texttt{⊥}, since it lacks a target node.
 %
-  Lastly \texttt{Upd α β} denotes the update of source node \texttt{α}
-  to target node \texttt{β}, concretely a constructor change, which consists in mapping \texttt{⟨ α ⟩}
-  into \texttt{⟨ β ⟩}.
+Similarly edit \texttt{Ins α}, inserts node \texttt{α}, which
+then lacks a source node, hence it has the empty value \texttt{⊥} 
+as source value.
 %
-  Note that there is no explicit copy edit: it is just a special case
-  of update, in which the source and target nodes happen to be the
-  same. \todo{Why? Explain!}
+Edit \texttt{Upd α β} updates source node \texttt{α} with target node
+\texttt{β} and concretely represents a constructor change.
 %
-  Edits whose source and target values are identical are called
-  \emph{identity} edits. Copy and no-operation fall into this
-  category.
+Note that there is no explicit copy edit: it is just a special case of
+update, in which the source and target nodes happen to be the same.
+%
+Edits that have the same \emph{source} and \emph{target} value are
+called \emph{identity} edits ---observe that they have type \texttt{v
+  ⟼ v}.
+%
+Node copy and no-operation fall into this category.
+%
+Even though the edit data type, as it is here defined, is not space
+efficient, because it might store the same node twice, it is more
+suitable for reasoning and leads to a more elegant merge and conflict
+semantics.
+%
+\todo{An implementation should take care of this. Do we?}
 	
 	\subsection{Edit Script}
         \label{subsec:edit-script}
